test/kobra-code/semantic-errors/bad-return-statement.ks
fn tester():
  $ x = 10
end

return x
